[package]
name = "fourx"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["bevy_dev_tools", "dynamic_linking"] }
# bevy_rapier3d = {version="0.25.0", features=["debug-render-3d"]}
bevy_panorbit_camera = "0.21.2"
noise = "0.9.0"
bevy_flycam = "0.15.0"
rand = "0.8.5"
hexx = { version = "0.20.0", features = ["bevy_reflect", "mesh"] }
noisy_bevy = "0.8.0"
spade = "2.12.1"
nalgebra = "0.33.2"
naturalneighbor = "1.2.2"
async-std = "1.13.0"
bluenoise = "0.2.1"
rand_pcg = "0.9.0"
poisson = "0.10.1"
fast_poisson = "1.0.0"
intersection_detection = "0.1.3"
geo = "0.29.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
